--- a/src/App.css
+++ b/src/App.css
@@ -333,18 +333,19 @@ CODE {
 
   grid-row-gap: 0;
 
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
 }
 
 .slider-container + .slider-container {
-  margin-top: 0.40rem;
-  /*border-top: 1px solid #aaa;*/
+  /* margin-top: 0.40rem; */
+  /* border-top: 1px solid #aaa; */
+  background-color: inherit;
 }
 
 .slider-name {
   grid-area: name;
 
-  justify-self: stretch;
+  justify-self: center;
   align-self: center;
 
   margin-left: 0.5em;
@@ -372,8 +373,10 @@ CODE {
   justify-self: stretch;
   align-self: center;
 
-  margin-left: 0.25em;
+  margin-left: 5em;
+  margin-right: 5em;
   padding: 0 0.25em;
+
 }
 
 .slider-minus {
