--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,9 @@ HTML, BODY {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.root-container {
+/* .root-container {
   background-color: whitesmoke;
-}
+} */
 
 /* .main-container {
   display: grid;
@@ -62,18 +62,33 @@ HTML, BODY {
   grid-template-rows: 50px minmax(calc(100% - 40px), auto) 20px;
 } */
 
-.simulation-container {
+/* .simulation-container {
   display: grid;
   grid-template-areas:
       "controls automata audio"
       "blankboxl  curve  blankboxr";
   grid-template-columns: 25% minmax(auto, 650px) 25%;
   grid-template-rows: 75% auto;
+} */
+
+.simulation-container {
+  display: grid;
+  margin: auto;
+  grid-template-areas:
+      "controls automata"
+      "blankboxl  curve";
+  grid-template-columns: 25% minmax(auto, 650px);
+  grid-template-rows: 75% auto;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 950px) {
   .simulation-container {
-    grid-template-columns: auto minmax(auto, 375px) auto;
+    grid-template-areas:
+      "automata"
+      "curve" 
+      "controls";
+    grid-template-columns: 100vw;
+    grid-template-rows: auto auto auto;
   }
 }
 
@@ -81,14 +96,14 @@ HTML, BODY {
 .controls {
   grid-area: controls;
   /* background-color: #b5c9e6; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: space-evenly; */
 }
 
 .automata {
   grid-area: automata;
-  justify-self: center;
+  /* justify-self: center; */
 
   /* padding: 3em 1em; */
 }
@@ -383,8 +398,8 @@ CODE {
   justify-self: stretch;
   align-self: center;
 
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 1em;
+  margin-right: 1em;
   padding: 0 0.25em;
 }
 
